# parser_gos

./: Pipfile  README.md  app.py  export.py  locators.py  logger_settings.py  logic.py  new_ui.py  pyproject.toml  test_logic.py  untitled.py  untitled.ui
pages/: base_page.py  documents_results.py  gispgov.py  main.py  purchase.py  purchase_search_page.py  purchase_supplier_results.py  roszdrvnadzor.py
