[tool.poetry]
name = "parser_gosusl"
version = "0.1.0"
description = ""
authors = ["Валерий Газаров <v.gazarov@fortus.pro>"]

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.6"
lxml = "^4.9.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
