[tool.poetry]
name = "parser_gosusl"
version = "0.1.0"
description = ""
authors = ["Валерий Газаров <v.gazarov@fortus.pro>"]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.9.0"
requests = "^2.27.1"
loguru = "^0.6.0"
progress = "^1.6"
alive-progress = "^2.4.1"
openpyxl = "^3.0.10"
PyQt5 = "^5.15.6"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
